# Textile-shop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
server/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
server/accounts/: admin.py  filters.py  models.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_alter_account_type.py  0003_alter_account_balance.py
server/custom_admin/: urls.py  views.py
server/customers/: admin.py  models.py
server/customers/migrations/: 0001_initial.py  0002_remove_customerprofile_state_and_more.py
server/employees/: admin.py  apps.py  filter.py  filters.py  models.py  urls.py  views.py
server/employees/migrations/: 0001_initial.py  0002_auto_20230209_1352.py  0002_rename_overtime_employee_overtime_work.py  0003_rename_user_salary_employee.py  0004_person_email.py  0005_alter_person_options.py  0006_auto_20230212_0015.py
server/materials/: admin.py  filters.py  models.py  urls.py  views.py
server/materials/migrations/: 0001_initial.py  0002_material_transaction_date_and_more.py
server/products/: admin.py  apps.py  filters.py  models.py  urls.py  utils.py  views.py
server/products/migrations/: 0001_initial.py  0002_auto_20230207_1358.py  0002_auto_20230208_0125.py  0002_auto_20230211_1230.py  0002_pillow_size_alter_fiberbag_description_and_more.py  (+5 more)
server/receipts/: admin.py  models.py  urls.py  views.py
server/suppliers/: models.py  tests.py
server/templates/: base.html
server/textile_shop/: asgi.py  settings.py  urls.py  wsgi.py
(+45 files in other folders)
